# dubplanetar

./: .gitignore  DubPlanetar.desktop  Installer DubPlanetar.desktop  Installer-DubPlanetar.bat  Lancer-DubPlanetar.bat  Lancer-DubPlanetar.vbs  README.fr.md  README.md  install-dubplanetar.ps1  install-dubplanetar.sh  install_dubplanetar.py  launch-dubplanetar.ps1  launch-dubplanetar.sh  launch_dubplanetar.py  pyproject.toml  requirements.txt
install/Linux/: Install.sh  LISEZMOI.txt  README.txt
install/Windows/: Install.bat  LISEZMOI.txt  README.txt
scripts/: compile_translations.py  pack_install_bundles.py  run_desktop_action.sh
src/dub_planetar/: __init__.py  __main__.py  app.py  i18n.py  platform_env.py  preflight.py  worker.py
src/dub_planetar/pipeline/: __init__.py  alignment.py  crop.py  debayer.py  decoder.py  drizzle.py  scoring.py  stacker.py  stacking.py
src/dub_planetar/translations/: dub_planetar_de.qm  dub_planetar_de.ts  dub_planetar_en.qm  dub_planetar_en.ts  dub_planetar_es.qm  dub_planetar_es.ts  dub_planetar_fr.qm  dub_planetar_fr.ts
